--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,3 @@
-# File per il deployment automatico su Render.com
 services:
   - type: web
     name: tiktok-telegram-bot
@@ -7,8 +6,9 @@ services:
     plan: free
     buildCommand: |
       pip install --upgrade pip
-      pip install python-telegram-bot==20.8
-      pip install -r requirements.txt
+      pip uninstall -y python-telegram-bot
+      pip install --no-cache-dir python-telegram-bot==20.8
+      pip install --no-cache-dir -r requirements.txt
     startCommand: python bot.py
     envVars:
       - key: TELEGRAM_BOT_TOKEN
