--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-telegram-bot==20.8
 python-dotenv==1.0.0
 requests==2.31.0
-yt-dlp
+yt-dlp>=2023.11.15
 aiohttp>=3.9.0
 beautifulsoup4==4.12.2
