--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-python-telegram-bot==20.8
-python-dotenv==1.0.0
-requests==2.31.0
-yt-dlp>=2023.11.15
-aiohttp>=3.9.0
+yt-dlp>=2025.11.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+requests>=2.31.0
+python-multipart>=0.0.6
+gunicorn>=21.0.0
